<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/exploreFragment">

    <fragment
        android:id="@+id/exploreFragment"
        android:name="com.example.flickrgallery.ui.explore.ExploreFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_explore" >
        <action
            android:id="@+id/action_exploreFragment_to_photoDetailsFragment"
            app:destination="@id/photoDetailsFragment">
        </action>
        <argument
            android:name="storedLocationArg"
            app:argType="com.example.domain.StoredLocation"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/savedPhotosFragment"
        android:name="com.example.flickrgallery.ui.savedPhotos.SavedPhotosFragment"
        android:label="@string/img_guardadas" >
        <action
            android:id="@+id/action_savedPhotosFragment_to_photoDetailsFragment"
            app:destination="@id/photoDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/photoDetailsFragment"
        android:name="com.example.flickrgallery.ui.photoDetails.PhotoDetailsFragment"
        android:label="@string/saved_photos_title"
        tools:layout="@layout/photo_details_fragment" >
        <argument
            android:name="photoArg"
            app:argType="com.example.domain.Photo"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/storedLocationsFragment"
        android:name="com.example.flickrgallery.ui.storedLocations.StoredLocationsFragment"
        android:label="@string/stored_locations" >
        <action
            android:id="@+id/action_storedLocationsFragment_to_storedLocationFragment"
            app:destination="@id/storedLocationFragment" />
    </fragment>

    <fragment
        android:id="@+id/storedLocationFragment"
        android:name="com.example.flickrgallery.ui.storedLocationPhotos.StoredLocationFragment"
        android:label="@string/stored_location_photos"
        tools:layout="@layout/stored_location_fragment" >
        <action
            android:id="@+id/action_storedLocationFragment_to_photoDetailsFragment"
            app:destination="@id/photoDetailsFragment" />
        <argument
            android:name="storedLocationArg"
            app:argType="com.example.domain.StoredLocation"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
</navigation>